antlr/calcWithFunctionsParser.cpp

// Generated from calcWithFunctions.g4 by ANTLR 4.11.1


#include "calcWithFunctionsVisitor.h"

#include "calcWithFunctionsParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct CalcWithFunctionsParserStaticData final {
  CalcWithFunctionsParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  CalcWithFunctionsParserStaticData(const CalcWithFunctionsParserStaticData&) = delete;
  CalcWithFunctionsParserStaticData(CalcWithFunctionsParserStaticData&&) = delete;
  CalcWithFunctionsParserStaticData& operator=(const CalcWithFunctionsParserStaticData&) = delete;
  CalcWithFunctionsParserStaticData& operator=(CalcWithFunctionsParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag calcwithfunctionsParserOnceFlag;
CalcWithFunctionsParserStaticData *calcwithfunctionsParserStaticData = nullptr;

void calcwithfunctionsParserInitialize() {
  assert(calcwithfunctionsParserStaticData == nullptr);
  auto staticData = std::make_unique<CalcWithFunctionsParserStaticData>(
    std::vector<std::string>{
      "program", "statement", "function_definition", "constant", "variable", 
      "expression", "params_names_list", "params_values_list"
    },
    std::vector<std::string>{
      "", "'func'", "'('", "')'", "'=>'", "'*'", "'/'", "'+'", "'-'", "'='", 
      "','", "'\\n'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "NEWLINE", "DIGIT", "ID", 
      "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  calcwithfunctionsParserStaticData = staticData.release();
}

}

calcWithFunctionsParser::calcWithFunctionsParser(TokenStream *input) : calcWithFunctionsParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

calcWithFunctionsParser::calcWithFunctionsParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  calcWithFunctionsParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *calcwithfunctionsParserStaticData->atn, calcwithfunctionsParserStaticData->decisionToDFA, calcwithfunctionsParserStaticData->sharedContextCache, options);
}

calcWithFunctionsParser::~calcWithFunctionsParser() {
  delete _interpreter;
}

const atn::ATN& calcWithFunctionsParser::getATN() const {
  return *calcwithfunctionsParserStaticData->atn;
}

std::string calcWithFunctionsParser::getGrammarFileName() const {
  return "calcWithFunctions.g4";
}

const std::vector<std::string>& calcWithFunctionsParser::getRuleNames() const {
  return calcwithfunctionsParserStaticData->ruleNames;
}

const dfa::Vocabulary& calcWithFunctionsParser::getVocabulary() const {
  return calcwithfunctionsParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView calcWithFunctionsParser::getSerializedATN() const {
  return calcwithfunctionsParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

calcWithFunctionsParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<calcWithFunctionsParser::StatementContext *> calcWithFunctionsParser::ProgramContext::statement() {
  return getRuleContexts<calcWithFunctionsParser::StatementContext>();
}

calcWithFunctionsParser::StatementContext* calcWithFunctionsParser::ProgramContext::statement(size_t i) {
  return getRuleContext<calcWithFunctionsParser::StatementContext>(i);
}


size_t calcWithFunctionsParser::ProgramContext::getRuleIndex() const {
  return calcWithFunctionsParser::RuleProgram;
}


std::any calcWithFunctionsParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<calcWithFunctionsVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

calcWithFunctionsParser::ProgramContext* calcWithFunctionsParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, calcWithFunctionsParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(19);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 14342) != 0) {
      setState(16);
      statement();
      setState(21);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

calcWithFunctionsParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t calcWithFunctionsParser::StatementContext::getRuleIndex() const {
  return calcWithFunctionsParser::RuleStatement;
}

void calcWithFunctionsParser::StatementContext::copyFrom(StatementContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- IgnoreContext ------------------------------------------------------------------

tree::TerminalNode* calcWithFunctionsParser::IgnoreContext::NEWLINE() {
  return getToken(calcWithFunctionsParser::NEWLINE, 0);
}

calcWithFunctionsParser::IgnoreContext::IgnoreContext(StatementContext *ctx) { copyFrom(ctx); }


std::any calcWithFunctionsParser::IgnoreContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<calcWithFunctionsVisitor*>(visitor))
    return parserVisitor->visitIgnore(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Define_function_stmtContext ------------------------------------------------------------------

calcWithFunctionsParser::Function_definitionContext* calcWithFunctionsParser::Define_function_stmtContext::function_definition() {
  return getRuleContext<calcWithFunctionsParser::Function_definitionContext>(0);
}

tree::TerminalNode* calcWithFunctionsParser::Define_function_stmtContext::NEWLINE() {
  return getToken(calcWithFunctionsParser::NEWLINE, 0);
}

calcWithFunctionsParser::Define_function_stmtContext::Define_function_stmtContext(StatementContext *ctx) { copyFrom(ctx); }


std::any calcWithFunctionsParser::Define_function_stmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<calcWithFunctionsVisitor*>(visitor))
    return parserVisitor->visitDefine_function_stmt(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Evaluate_expression_stmtContext ------------------------------------------------------------------

calcWithFunctionsParser::ExpressionContext* calcWithFunctionsParser::Evaluate_expression_stmtContext::expression() {
  return getRuleContext<calcWithFunctionsParser::ExpressionContext>(0);
}

tree::TerminalNode* calcWithFunctionsParser::Evaluate_expression_stmtContext::NEWLINE() {
  return getToken(calcWithFunctionsParser::NEWLINE, 0);
}

calcWithFunctionsParser::Evaluate_expression_stmtContext::Evaluate_expression_stmtContext(StatementContext *ctx) { copyFrom(ctx); }


std::any calcWithFunctionsParser::Evaluate_expression_stmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<calcWithFunctionsVisitor*>(visitor))
    return parserVisitor->visitEvaluate_expression_stmt(this);
  else
    return visitor->visitChildren(this);
}
calcWithFunctionsParser::StatementContext* calcWithFunctionsParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, calcWithFunctionsParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(29);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case calcWithFunctionsParser::NEWLINE: {
        _localctx = _tracker.createInstance<calcWithFunctionsParser::IgnoreContext>(_localctx);
        enterOuterAlt(_localctx, 1);
        setState(22);
        match(calcWithFunctionsParser::NEWLINE);
        break;
      }

      case calcWithFunctionsParser::T__1:
      case calcWithFunctionsParser::DIGIT:
      case calcWithFunctionsParser::ID: {
        _localctx = _tracker.createInstance<calcWithFunctionsParser::Evaluate_expression_stmtContext>(_localctx);
        enterOuterAlt(_localctx, 2);
        setState(23);
        expression(0);
        setState(24);
        match(calcWithFunctionsParser::NEWLINE);
        break;
      }

      case calcWithFunctionsParser::T__0: {
        _localctx = _tracker.createInstance<calcWithFunctionsParser::Define_function_stmtContext>(_localctx);
        enterOuterAlt(_localctx, 3);
        setState(26);
        function_definition();
        setState(27);
        match(calcWithFunctionsParser::NEWLINE);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Function_definitionContext ------------------------------------------------------------------

calcWithFunctionsParser::Function_definitionContext::Function_definitionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* calcWithFunctionsParser::Function_definitionContext::ID() {
  return getToken(calcWithFunctionsParser::ID, 0);
}

calcWithFunctionsParser::Params_names_listContext* calcWithFunctionsParser::Function_definitionContext::params_names_list() {
  return getRuleContext<calcWithFunctionsParser::Params_names_listContext>(0);
}

calcWithFunctionsParser::ExpressionContext* calcWithFunctionsParser::Function_definitionContext::expression() {
  return getRuleContext<calcWithFunctionsParser::ExpressionContext>(0);
}


size_t calcWithFunctionsParser::Function_definitionContext::getRuleIndex() const {
  return calcWithFunctionsParser::RuleFunction_definition;
}


std::any calcWithFunctionsParser::Function_definitionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<calcWithFunctionsVisitor*>(visitor))
    return parserVisitor->visitFunction_definition(this);
  else
    return visitor->visitChildren(this);
}

calcWithFunctionsParser::Function_definitionContext* calcWithFunctionsParser::function_definition() {
  Function_definitionContext *_localctx = _tracker.createInstance<Function_definitionContext>(_ctx, getState());
  enterRule(_localctx, 4, calcWithFunctionsParser::RuleFunction_definition);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(31);
    match(calcWithFunctionsParser::T__0);
    setState(32);
    match(calcWithFunctionsParser::ID);
    setState(33);
    match(calcWithFunctionsParser::T__1);
    setState(34);
    params_names_list(0);
    setState(35);
    match(calcWithFunctionsParser::T__2);
    setState(36);
    match(calcWithFunctionsParser::T__3);
    setState(37);
    expression(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstantContext ------------------------------------------------------------------

calcWithFunctionsParser::ConstantContext::ConstantContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> calcWithFunctionsParser::ConstantContext::DIGIT() {
  return getTokens(calcWithFunctionsParser::DIGIT);
}

tree::TerminalNode* calcWithFunctionsParser::ConstantContext::DIGIT(size_t i) {
  return getToken(calcWithFunctionsParser::DIGIT, i);
}


size_t calcWithFunctionsParser::ConstantContext::getRuleIndex() const {
  return calcWithFunctionsParser::RuleConstant;
}


std::any calcWithFunctionsParser::ConstantContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<calcWithFunctionsVisitor*>(visitor))
    return parserVisitor->visitConstant(this);
  else
    return visitor->visitChildren(this);
}

calcWithFunctionsParser::ConstantContext* calcWithFunctionsParser::constant() {
  ConstantContext *_localctx = _tracker.createInstance<ConstantContext>(_ctx, getState());
  enterRule(_localctx, 6, calcWithFunctionsParser::RuleConstant);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(40); 
    _errHandler->sync(this);
    alt = 1;
    do {
      switch (alt) {
        case 1: {
              setState(39);
              match(calcWithFunctionsParser::DIGIT);
              break;
            }

      default:
        throw NoViableAltException(this);
      }
      setState(42); 
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    } while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VariableContext ------------------------------------------------------------------

calcWithFunctionsParser::VariableContext::VariableContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* calcWithFunctionsParser::VariableContext::ID() {
  return getToken(calcWithFunctionsParser::ID, 0);
}


size_t calcWithFunctionsParser::VariableContext::getRuleIndex() const {
  return calcWithFunctionsParser::RuleVariable;
}


std::any calcWithFunctionsParser::VariableContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<calcWithFunctionsVisitor*>(visitor))
    return parserVisitor->visitVariable(this);
  else
    return visitor->visitChildren(this);
}

calcWithFunctionsParser::VariableContext* calcWithFunctionsParser::variable() {
  VariableContext *_localctx = _tracker.createInstance<VariableContext>(_ctx, getState());
  enterRule(_localctx, 8, calcWithFunctionsParser::RuleVariable);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(44);
    match(calcWithFunctionsParser::ID);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionContext ------------------------------------------------------------------

calcWithFunctionsParser::ExpressionContext::ExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t calcWithFunctionsParser::ExpressionContext::getRuleIndex() const {
  return calcWithFunctionsParser::RuleExpression;
}

void calcWithFunctionsParser::ExpressionContext::copyFrom(ExpressionContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- Expr_variable_evalContext ------------------------------------------------------------------

calcWithFunctionsParser::VariableContext* calcWithFunctionsParser::Expr_variable_evalContext::variable() {
  return getRuleContext<calcWithFunctionsParser::VariableContext>(0);
}

calcWithFunctionsParser::Expr_variable_evalContext::Expr_variable_evalContext(ExpressionContext *ctx) { copyFrom(ctx); }


std::any calcWithFunctionsParser::Expr_variable_evalContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<calcWithFunctionsVisitor*>(visitor))
    return parserVisitor->visitExpr_variable_eval(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Expr_assign_evalContext ------------------------------------------------------------------

calcWithFunctionsParser::VariableContext* calcWithFunctionsParser::Expr_assign_evalContext::variable() {
  return getRuleContext<calcWithFunctionsParser::VariableContext>(0);
}

calcWithFunctionsParser::ExpressionContext* calcWithFunctionsParser::Expr_assign_evalContext::expression() {
  return getRuleContext<calcWithFunctionsParser::ExpressionContext>(0);
}

calcWithFunctionsParser::Expr_assign_evalContext::Expr_assign_evalContext(ExpressionContext *ctx) { copyFrom(ctx); }


std::any calcWithFunctionsParser::Expr_assign_evalContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<calcWithFunctionsVisitor*>(visitor))
    return parserVisitor->visitExpr_assign_eval(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Expr_sub_evalContext ------------------------------------------------------------------

std::vector<calcWithFunctionsParser::ExpressionContext *> calcWithFunctionsParser::Expr_sub_evalContext::expression() {
  return getRuleContexts<calcWithFunctionsParser::ExpressionContext>();
}

calcWithFunctionsParser::ExpressionContext* calcWithFunctionsParser::Expr_sub_evalContext::expression(size_t i) {
  return getRuleContext<calcWithFunctionsParser::ExpressionContext>(i);
}

calcWithFunctionsParser::Expr_sub_evalContext::Expr_sub_evalContext(ExpressionContext *ctx) { copyFrom(ctx); }


std::any calcWithFunctionsParser::Expr_sub_evalContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<calcWithFunctionsVisitor*>(visitor))
    return parserVisitor->visitExpr_sub_eval(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Expr_constant_evalContext ------------------------------------------------------------------

calcWithFunctionsParser::ConstantContext* calcWithFunctionsParser::Expr_constant_evalContext::constant() {
  return getRuleContext<calcWithFunctionsParser::ConstantContext>(0);
}

calcWithFunctionsParser::Expr_constant_evalContext::Expr_constant_evalContext(ExpressionContext *ctx) { copyFrom(ctx); }


std::any calcWithFunctionsParser::Expr_constant_evalContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<calcWithFunctionsVisitor*>(visitor))
    return parserVisitor->visitExpr_constant_eval(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Expr_function_call_evalContext ------------------------------------------------------------------

tree::TerminalNode* calcWithFunctionsParser::Expr_function_call_evalContext::ID() {
  return getToken(calcWithFunctionsParser::ID, 0);
}

calcWithFunctionsParser::Params_values_listContext* calcWithFunctionsParser::Expr_function_call_evalContext::params_values_list() {
  return getRuleContext<calcWithFunctionsParser::Params_values_listContext>(0);
}

calcWithFunctionsParser::Expr_function_call_evalContext::Expr_function_call_evalContext(ExpressionContext *ctx) { copyFrom(ctx); }


std::any calcWithFunctionsParser::Expr_function_call_evalContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<calcWithFunctionsVisitor*>(visitor))
    return parserVisitor->visitExpr_function_call_eval(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Expr_add_evalContext ------------------------------------------------------------------

std::vector<calcWithFunctionsParser::ExpressionContext *> calcWithFunctionsParser::Expr_add_evalContext::expression() {
  return getRuleContexts<calcWithFunctionsParser::ExpressionContext>();
}

calcWithFunctionsParser::ExpressionContext* calcWithFunctionsParser::Expr_add_evalContext::expression(size_t i) {
  return getRuleContext<calcWithFunctionsParser::ExpressionContext>(i);
}

calcWithFunctionsParser::Expr_add_evalContext::Expr_add_evalContext(ExpressionContext *ctx) { copyFrom(ctx); }


std::any calcWithFunctionsParser::Expr_add_evalContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<calcWithFunctionsVisitor*>(visitor))
    return parserVisitor->visitExpr_add_eval(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Expr_mul_evalContext ------------------------------------------------------------------

std::vector<calcWithFunctionsParser::ExpressionContext *> calcWithFunctionsParser::Expr_mul_evalContext::expression() {
  return getRuleContexts<calcWithFunctionsParser::ExpressionContext>();
}

calcWithFunctionsParser::ExpressionContext* calcWithFunctionsParser::Expr_mul_evalContext::expression(size_t i) {
  return getRuleContext<calcWithFunctionsParser::ExpressionContext>(i);
}

calcWithFunctionsParser::Expr_mul_evalContext::Expr_mul_evalContext(ExpressionContext *ctx) { copyFrom(ctx); }


std::any calcWithFunctionsParser::Expr_mul_evalContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<calcWithFunctionsVisitor*>(visitor))
    return parserVisitor->visitExpr_mul_eval(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Expr_div_evalContext ------------------------------------------------------------------

std::vector<calcWithFunctionsParser::ExpressionContext *> calcWithFunctionsParser::Expr_div_evalContext::expression() {
  return getRuleContexts<calcWithFunctionsParser::ExpressionContext>();
}

calcWithFunctionsParser::ExpressionContext* calcWithFunctionsParser::Expr_div_evalContext::expression(size_t i) {
  return getRuleContext<calcWithFunctionsParser::ExpressionContext>(i);
}

calcWithFunctionsParser::Expr_div_evalContext::Expr_div_evalContext(ExpressionContext *ctx) { copyFrom(ctx); }


std::any calcWithFunctionsParser::Expr_div_evalContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<calcWithFunctionsVisitor*>(visitor))
    return parserVisitor->visitExpr_div_eval(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Expr_parenthesis_evalContext ------------------------------------------------------------------

calcWithFunctionsParser::ExpressionContext* calcWithFunctionsParser::Expr_parenthesis_evalContext::expression() {
  return getRuleContext<calcWithFunctionsParser::ExpressionContext>(0);
}

calcWithFunctionsParser::Expr_parenthesis_evalContext::Expr_parenthesis_evalContext(ExpressionContext *ctx) { copyFrom(ctx); }


std::any calcWithFunctionsParser::Expr_parenthesis_evalContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<calcWithFunctionsVisitor*>(visitor))
    return parserVisitor->visitExpr_parenthesis_eval(this);
  else
    return visitor->visitChildren(this);
}

calcWithFunctionsParser::ExpressionContext* calcWithFunctionsParser::expression() {
   return expression(0);
}

calcWithFunctionsParser::ExpressionContext* calcWithFunctionsParser::expression(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  calcWithFunctionsParser::ExpressionContext *_localctx = _tracker.createInstance<ExpressionContext>(_ctx, parentState);
  calcWithFunctionsParser::ExpressionContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 10;
  enterRecursionRule(_localctx, 10, calcWithFunctionsParser::RuleExpression, precedence);

    

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(62);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<Expr_constant_evalContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;

      setState(47);
      constant();
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<Expr_variable_evalContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(48);
      variable();
      break;
    }

    case 3: {
      _localctx = _tracker.createInstance<Expr_parenthesis_evalContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(49);
      match(calcWithFunctionsParser::T__1);
      setState(50);
      expression(0);
      setState(51);
      match(calcWithFunctionsParser::T__2);
      break;
    }

    case 4: {
      _localctx = _tracker.createInstance<Expr_function_call_evalContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(53);
      match(calcWithFunctionsParser::ID);
      setState(54);
      match(calcWithFunctionsParser::T__1);
      setState(55);
      params_values_list(0);
      setState(56);
      match(calcWithFunctionsParser::T__2);
      break;
    }

    case 5: {
      _localctx = _tracker.createInstance<Expr_assign_evalContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(58);
      variable();
      setState(59);
      match(calcWithFunctionsParser::T__8);
      setState(60);
      expression(1);
      break;
    }

    default:
      break;
    }
    _ctx->stop = _input->LT(-1);
    setState(78);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(76);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
        case 1: {
          auto newContext = _tracker.createInstance<Expr_mul_evalContext>(_tracker.createInstance<ExpressionContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleExpression);
          setState(64);

          if (!(precpred(_ctx, 7))) throw FailedPredicateException(this, "precpred(_ctx, 7)");
          setState(65);
          match(calcWithFunctionsParser::T__4);
          setState(66);
          expression(8);
          break;
        }

        case 2: {
          auto newContext = _tracker.createInstance<Expr_div_evalContext>(_tracker.createInstance<ExpressionContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleExpression);
          setState(67);

          if (!(precpred(_ctx, 6))) throw FailedPredicateException(this, "precpred(_ctx, 6)");
          setState(68);
          match(calcWithFunctionsParser::T__5);
          setState(69);
          expression(7);
          break;
        }

        case 3: {
          auto newContext = _tracker.createInstance<Expr_add_evalContext>(_tracker.createInstance<ExpressionContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleExpression);
          setState(70);

          if (!(precpred(_ctx, 5))) throw FailedPredicateException(this, "precpred(_ctx, 5)");
          setState(71);
          match(calcWithFunctionsParser::T__6);
          setState(72);
          expression(6);
          break;
        }

        case 4: {
          auto newContext = _tracker.createInstance<Expr_sub_evalContext>(_tracker.createInstance<ExpressionContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleExpression);
          setState(73);

          if (!(precpred(_ctx, 4))) throw FailedPredicateException(this, "precpred(_ctx, 4)");
          setState(74);
          match(calcWithFunctionsParser::T__7);
          setState(75);
          expression(5);
          break;
        }

        default:
          break;
        } 
      }
      setState(80);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- Params_names_listContext ------------------------------------------------------------------

calcWithFunctionsParser::Params_names_listContext::Params_names_listContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t calcWithFunctionsParser::Params_names_listContext::getRuleIndex() const {
  return calcWithFunctionsParser::RuleParams_names_list;
}

void calcWithFunctionsParser::Params_names_listContext::copyFrom(Params_names_listContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- Params_names_singleContext ------------------------------------------------------------------

tree::TerminalNode* calcWithFunctionsParser::Params_names_singleContext::ID() {
  return getToken(calcWithFunctionsParser::ID, 0);
}

calcWithFunctionsParser::Params_names_singleContext::Params_names_singleContext(Params_names_listContext *ctx) { copyFrom(ctx); }


std::any calcWithFunctionsParser::Params_names_singleContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<calcWithFunctionsVisitor*>(visitor))
    return parserVisitor->visitParams_names_single(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Params_names_multipleContext ------------------------------------------------------------------

calcWithFunctionsParser::Params_names_listContext* calcWithFunctionsParser::Params_names_multipleContext::params_names_list() {
  return getRuleContext<calcWithFunctionsParser::Params_names_listContext>(0);
}

tree::TerminalNode* calcWithFunctionsParser::Params_names_multipleContext::ID() {
  return getToken(calcWithFunctionsParser::ID, 0);
}

calcWithFunctionsParser::Params_names_multipleContext::Params_names_multipleContext(Params_names_listContext *ctx) { copyFrom(ctx); }


std::any calcWithFunctionsParser::Params_names_multipleContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<calcWithFunctionsVisitor*>(visitor))
    return parserVisitor->visitParams_names_multiple(this);
  else
    return visitor->visitChildren(this);
}

calcWithFunctionsParser::Params_names_listContext* calcWithFunctionsParser::params_names_list() {
   return params_names_list(0);
}
